--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
                 </div>
                 <div class="about-text">
                     <h3>Software Engineer & Web Developer</h3>
-                    <p>I'm a Computer Science student at Brown University with a passion for creating intuitive digital
+                    <p>Hi there! I'm Nicole :), a Computer Science student at Brown University with a passion for
+                        creating intuitive digital
                         experiences. With internship experience at Amazon and a background in research, I blend
                         technical
                         expertise with creative problem-solving to build solutions that are both powerful and
